Correcció errors amb boostrap 5 css

--- a/src/frontend/estils/style.css
+++ b/src/frontend/estils/style.css
@@ -12,7 +12,7 @@ License URI: http://www.gnu.org/licenses/gpl-3.0.html
 /* HEADER */
 /* @import './contenidor.css';*/
 @import './loginPage.css';
-/* @import './menuIntranet.css';*/ 
+/* @import './menuIntranet.css';*/
 @import './taules.css';
 @import './formulari.css';
 @import './botons.css';
@@ -20,7 +20,7 @@ License URI: http://www.gnu.org/licenses/gpl-3.0.html
 @import './cards.css';
 @import './fitxa_dades.css';
 /* @import './paginacio.css';*/
-/* @import './tab.css'; */ 
+/* @import './tab.css'; */
 @import url('https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css');
 
 body {
@@ -46,6 +46,16 @@ body {
   border: 0;
   background-color: #cecece;
   color: #333;
+  padding-top: var(--topOffset, 0px);
+}
+
+#siteHeader {
+  z-index: 1050;
+}
+
+/* si tu intranetNav es fixed o sticky, mantenlo por debajo */
+#intranetNav {
+  z-index: 1040;
 }
 
 a:link,
