Botó connexió area usuari

--- a/src/frontend/estils/style.css
+++ b/src/frontend/estils/style.css
@@ -10,16 +10,13 @@ License URI: http://www.gnu.org/licenses/gpl-3.0.html
 */
 
 /* HEADER */
-/* @import './contenidor.css';*/
 @import './loginPage.css';
-/* @import './menuIntranet.css';*/
 @import './taules.css';
 @import './formulari.css';
 @import './botons.css';
+@import './header.css';
 @import './footer.css';
 @import './fitxa_dades.css';
-/* @import './paginacio.css';*/
-/* @import './tab.css'; */
 @import url('https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css');
 
 body {
