--- a/src/frontend/estils/style.css
+++ b/src/frontend/estils/style.css
@@ -18,6 +18,7 @@ License URI: http://www.gnu.org/licenses/gpl-3.0.html
 @import './footer.css';
 @import './fitxa_dades.css';
 @import url('https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.csss');
 
 body {
   font-family:
